// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingPlans component should display a custom plan 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/billing"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Plans
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container plans-container"
    fluid={true}
    tag="div"
  >
    <div
      className="interval-toggle"
    >
      <ButtonGroup
        role="group"
        tag="div"
      >
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Monthly
        </Button>
        <Button
          color="secondary"
          onClick={[Function]}
          tag="button"
        >
          Yearly
        </Button>
      </ButtonGroup>
    </div>
    <CardDeck
      className="mb-5 plans-cards"
      tag="div"
    >
      <Plan
        isCurrentPlan={true}
        isFeatured={false}
        isTrialing={false}
        isUpdating={false}
        key="1"
        onClick={[Function]}
        plan={
          Immutable.Map {
            "public": true,
            "name": "custom plan",
            "free_tickets": 100,
            "currencySign": "$",
            "integrations": 10,
          }
        }
        showFooter={true}
      />
      <Component />
    </CardDeck>
  </Container>
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <div
      style={
        Object {
          "maxWidth": 900,
        }
      }
    >
      <h3
        className="mb-4"
      >
        Frequently asked questions
      </h3>
      <Row
        className="faq"
        tag="div"
      >
        <Col
          sm={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <dl>
            <dt>
              What's a ticket?
            </dt>
            <dd>
              A ticket is a conversation with a customer, on any channel. It can be by email, phone, chat, etc.
              <br />
              Usage only includes tickets that contain a response sent from Gorgias.
            </dd>
            <dt>
              Do I need to pay for all tickets received?
            </dt>
            <dd>
              No! You only pay for tickets that contain a response sent from Gorgias.
            </dd>
            <dt>
              Do I need to pay extra for chat?
            </dt>
            <dd>
              No, all channels are included. You can connect as many chat widgets, facebook pages, and email addresses as you want.
            </dd>
            <dt>
              What level of support is included in my plan?
            </dt>
            <dd>
              We provide all our customers with the same level of support. We're available 9am-7pm PST, over live chat & email.
            </dd>
          </dl>
        </Col>
        <Col
          sm={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <dl>
            <dt>
              I don’t know how many tickets I get per month. Can you help?
            </dt>
            <dd>
              Sure. You probably receive about 1,000 tickets for each user in your team. So if you’re paying for 5 seats with your current helpdesk, you’d pay for 5,000 tickets with Gorgias.
            </dd>
            <dt>
              Can I switch between plans?
            </dt>
            <dd>
              Yes you can. Switching between monthly/yearly plans will 
              <a
                href="https://stripe.com/docs/subscriptions/upgrading-downgrading#understanding-proration"
                rel="noreferrer noopener"
                target="_blank"
              >
                prorate
              </a>
               your subscription. See the question below for switching from yearly to monthly plans.
            </dd>
            <dt>
              Can I switch from an yearly plan to a monthly plan?
            </dt>
            <dd>
              Once you start using our annual plan, you will get a %17 discount (2 months for free). Given this discount, we don't allow switching to monthly plans until the next billing cycle begins. In practice, it means that if you subscribe to a yearly plan on 15 May, you will be able to switch to a monthly plan next year on 15 May. Make sure you send us a message before so we can make the switch for you.
            </dd>
          </dl>
        </Col>
      </Row>
    </div>
  </Container>
</div>
`;

exports[`BillingPlans component should display matching current plan 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/billing"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Plans
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container plans-container"
    fluid={true}
    tag="div"
  >
    <div
      className="interval-toggle"
    >
      <ButtonGroup
        role="group"
        tag="div"
      >
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Monthly
        </Button>
        <Button
          color="secondary"
          onClick={[Function]}
          tag="button"
        >
          Yearly
        </Button>
      </ButtonGroup>
    </div>
    <CardDeck
      className="mb-5 plans-cards"
      tag="div"
    >
      <Plan
        callToAction={
          <Button
            color="link"
            onClick={[Function]}
            tag="button"
          >
            Contact us
          </Button>
        }
        features={
          <ul>
            <li>
              <i
                className="material-icons feature-icon"
              >
                all_inclusive
              </i>
               
              <strong>
                Unlimited
              </strong>
               users
            </li>
            <li>
              <i
                className="material-icons feature-icon"
              >
                arrow_downward
              </i>
               
              Discounted prices for volumes of 
              <strong>
                10,000
                +
              </strong>
               tickets
            </li>
            <li>
              <i
                className="material-icons feature-icon"
              >
                beach_access
              </i>
               
              Premium support
            </li>
          </ul>
        }
        isCurrentPlan={false}
        isFeatured={false}
        isTrialing={false}
        isUpdating={false}
        plan={
          Immutable.Map {
            "name": "Enterprise",
          }
        }
        showFooter={true}
      />
    </CardDeck>
  </Container>
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <div
      style={
        Object {
          "maxWidth": 900,
        }
      }
    >
      <h3
        className="mb-4"
      >
        Frequently asked questions
      </h3>
      <Row
        className="faq"
        tag="div"
      >
        <Col
          sm={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <dl>
            <dt>
              What's a ticket?
            </dt>
            <dd>
              A ticket is a conversation with a customer, on any channel. It can be by email, phone, chat, etc.
              <br />
              Usage only includes tickets that contain a response sent from Gorgias.
            </dd>
            <dt>
              Do I need to pay for all tickets received?
            </dt>
            <dd>
              No! You only pay for tickets that contain a response sent from Gorgias.
            </dd>
            <dt>
              Do I need to pay extra for chat?
            </dt>
            <dd>
              No, all channels are included. You can connect as many chat widgets, facebook pages, and email addresses as you want.
            </dd>
            <dt>
              What level of support is included in my plan?
            </dt>
            <dd>
              We provide all our customers with the same level of support. We're available 9am-7pm PST, over live chat & email.
            </dd>
          </dl>
        </Col>
        <Col
          sm={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <dl>
            <dt>
              I don’t know how many tickets I get per month. Can you help?
            </dt>
            <dd>
              Sure. You probably receive about 1,000 tickets for each user in your team. So if you’re paying for 5 seats with your current helpdesk, you’d pay for 5,000 tickets with Gorgias.
            </dd>
            <dt>
              Can I switch between plans?
            </dt>
            <dd>
              Yes you can. Switching between monthly/yearly plans will 
              <a
                href="https://stripe.com/docs/subscriptions/upgrading-downgrading#understanding-proration"
                rel="noreferrer noopener"
                target="_blank"
              >
                prorate
              </a>
               your subscription. See the question below for switching from yearly to monthly plans.
            </dd>
            <dt>
              Can I switch from an yearly plan to a monthly plan?
            </dt>
            <dd>
              Once you start using our annual plan, you will get a %17 discount (2 months for free). Given this discount, we don't allow switching to monthly plans until the next billing cycle begins. In practice, it means that if you subscribe to a yearly plan on 15 May, you will be able to switch to a monthly plan next year on 15 May. Make sure you send us a message before so we can make the switch for you.
            </dd>
          </dl>
        </Col>
      </Row>
    </div>
  </Container>
</div>
`;

exports[`BillingPlans component should display multiple plans 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/billing"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Plans
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container plans-container"
    fluid={true}
    tag="div"
  >
    <div
      className="interval-toggle"
    >
      <ButtonGroup
        role="group"
        tag="div"
      >
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Monthly
        </Button>
        <Button
          color="secondary"
          onClick={[Function]}
          tag="button"
        >
          Yearly
        </Button>
      </ButtonGroup>
    </div>
    <CardDeck
      className="mb-5 plans-cards"
      tag="div"
    >
      <Plan
        callToAction={
          <Button
            color="link"
            onClick={[Function]}
            tag="button"
          >
            Contact us
          </Button>
        }
        features={
          <ul>
            <li>
              <i
                className="material-icons feature-icon"
              >
                all_inclusive
              </i>
               
              <strong>
                Unlimited
              </strong>
               users
            </li>
            <li>
              <i
                className="material-icons feature-icon"
              >
                arrow_downward
              </i>
               
              Discounted prices for volumes of 
              <strong>
                10,000
                +
              </strong>
               tickets
            </li>
            <li>
              <i
                className="material-icons feature-icon"
              >
                beach_access
              </i>
               
              Premium support
            </li>
          </ul>
        }
        isCurrentPlan={false}
        isFeatured={false}
        isTrialing={false}
        isUpdating={false}
        plan={
          Immutable.Map {
            "name": "Enterprise",
          }
        }
        showFooter={true}
      />
    </CardDeck>
  </Container>
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <div
      style={
        Object {
          "maxWidth": 900,
        }
      }
    >
      <h3
        className="mb-4"
      >
        Frequently asked questions
      </h3>
      <Row
        className="faq"
        tag="div"
      >
        <Col
          sm={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <dl>
            <dt>
              What's a ticket?
            </dt>
            <dd>
              A ticket is a conversation with a customer, on any channel. It can be by email, phone, chat, etc.
              <br />
              Usage only includes tickets that contain a response sent from Gorgias.
            </dd>
            <dt>
              Do I need to pay for all tickets received?
            </dt>
            <dd>
              No! You only pay for tickets that contain a response sent from Gorgias.
            </dd>
            <dt>
              Do I need to pay extra for chat?
            </dt>
            <dd>
              No, all channels are included. You can connect as many chat widgets, facebook pages, and email addresses as you want.
            </dd>
            <dt>
              What level of support is included in my plan?
            </dt>
            <dd>
              We provide all our customers with the same level of support. We're available 9am-7pm PST, over live chat & email.
            </dd>
          </dl>
        </Col>
        <Col
          sm={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <dl>
            <dt>
              I don’t know how many tickets I get per month. Can you help?
            </dt>
            <dd>
              Sure. You probably receive about 1,000 tickets for each user in your team. So if you’re paying for 5 seats with your current helpdesk, you’d pay for 5,000 tickets with Gorgias.
            </dd>
            <dt>
              Can I switch between plans?
            </dt>
            <dd>
              Yes you can. Switching between monthly/yearly plans will 
              <a
                href="https://stripe.com/docs/subscriptions/upgrading-downgrading#understanding-proration"
                rel="noreferrer noopener"
                target="_blank"
              >
                prorate
              </a>
               your subscription. See the question below for switching from yearly to monthly plans.
            </dd>
            <dt>
              Can I switch from an yearly plan to a monthly plan?
            </dt>
            <dd>
              Once you start using our annual plan, you will get a %17 discount (2 months for free). Given this discount, we don't allow switching to monthly plans until the next billing cycle begins. In practice, it means that if you subscribe to a yearly plan on 15 May, you will be able to switch to a monthly plan next year on 15 May. Make sure you send us a message before so we can make the switch for you.
            </dd>
          </dl>
        </Col>
      </Row>
    </div>
  </Container>
</div>
`;

exports[`BillingPlans component should load with empty props 1`] = `
<BillingPlans
  currentPlan={Immutable.Map {}}
  isAllowedToChangePlan={[Function]}
  notify={[Function]}
  plans={Immutable.Map {}}
  subscription={
    Immutable.Map {
      "plan": "some-plan",
    }
  }
  updateSubscription={[Function]}
>
  <div
    className="full-width"
  >
    <PageHeader
      title={
        <Breadcrumb
          tag="ol"
        >
          <BreadcrumbItem
            tag="li"
          >
            <Link
              className="section"
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/app/settings/billing"
            >
              Billing & Usage
            </Link>
          </BreadcrumbItem>
          <BreadcrumbItem
            tag="li"
          >
            Plans
          </BreadcrumbItem>
        </Breadcrumb>
      }
    >
      <div
        className="d-flex align-items-center justify-content-between flex-wrap page-header "
      >
        <Breadcrumb
          tag="ol"
        >
          <ol
            className="breadcrumb"
          >
            <BreadcrumbItem
              tag="li"
            >
              <li
                className="breadcrumb-item"
              >
                <Link
                  className="section"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/billing"
                >
                  <a
                    className="section"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Billing & Usage
                  </a>
                </Link>
              </li>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              <li
                className="breadcrumb-item"
              >
                Plans
              </li>
            </BreadcrumbItem>
          </ol>
        </Breadcrumb>
      </div>
    </PageHeader>
    <Container
      className="page-container plans-container"
      fluid={true}
      tag="div"
    >
      <div
        className="page-container plans-container container-fluid"
      >
        <div
          className="interval-toggle"
        >
          <ButtonGroup
            role="group"
            tag="div"
          >
            <div
              className="btn-group"
              role="group"
            >
              <Button
                color="primary"
                onClick={[Function]}
                tag="button"
              >
                <button
                  className="btn btn-primary"
                  onClick={[Function]}
                  type="button"
                >
                  Monthly
                </button>
              </Button>
              <Button
                color="secondary"
                onClick={[Function]}
                tag="button"
              >
                <button
                  className="btn btn-secondary"
                  onClick={[Function]}
                  type="button"
                >
                  Yearly
                </button>
              </Button>
            </div>
          </ButtonGroup>
        </div>
        <CardDeck
          className="mb-5 plans-cards"
          tag="div"
        >
          <div
            className="mb-5 plans-cards card-deck"
          >
            <Plan
              callToAction={
                <Button
                  color="link"
                  onClick={[Function]}
                  tag="button"
                >
                  Contact us
                </Button>
              }
              features={
                <ul>
                  <li>
                    <i
                      className="material-icons feature-icon"
                    >
                      all_inclusive
                    </i>
                     
                    <strong>
                      Unlimited
                    </strong>
                     users
                  </li>
                  <li>
                    <i
                      className="material-icons feature-icon"
                    >
                      arrow_downward
                    </i>
                     
                    Discounted prices for volumes of 
                    <strong>
                      10,000
                      +
                    </strong>
                     tickets
                  </li>
                  <li>
                    <i
                      className="material-icons feature-icon"
                    >
                      beach_access
                    </i>
                     
                    Premium support
                  </li>
                </ul>
              }
              isCurrentPlan={false}
              isFeatured={false}
              isTrialing={false}
              isUpdating={false}
              plan={
                Immutable.Map {
                  "name": "Enterprise",
                }
              }
              showFooter={true}
            >
              <Card
                className="plan plan-Enterprise"
                outline={true}
                tag="div"
              >
                <div
                  className="plan plan-Enterprise card"
                >
                  <CardHeader
                    className="plan-header"
                    tag="div"
                  >
                    <div
                      className="plan-header card-header"
                    >
                      <div
                        className="header-text"
                      >
                        <strong>
                          Enterprise
                        </strong>
                      </div>
                    </div>
                  </CardHeader>
                  <CardBody
                    tag="div"
                  >
                    <div
                      className="card-body"
                    >
                      <ul>
                        <li>
                          <i
                            className="material-icons feature-icon"
                          >
                            all_inclusive
                          </i>
                           
                          <strong>
                            Unlimited
                          </strong>
                           users
                        </li>
                        <li>
                          <i
                            className="material-icons feature-icon"
                          >
                            arrow_downward
                          </i>
                           
                          Discounted prices for volumes of 
                          <strong>
                            10,000
                            +
                          </strong>
                           tickets
                        </li>
                        <li>
                          <i
                            className="material-icons feature-icon"
                          >
                            beach_access
                          </i>
                           
                          Premium support
                        </li>
                      </ul>
                    </div>
                  </CardBody>
                  <CardFooter
                    tag="div"
                  >
                    <div
                      className="card-footer"
                    >
                      <Button
                        color="link"
                        onClick={[Function]}
                        tag="button"
                      >
                        <button
                          className="btn btn-link"
                          onClick={[Function]}
                          type="button"
                        >
                          Contact us
                        </button>
                      </Button>
                    </div>
                  </CardFooter>
                </div>
              </Card>
            </Plan>
          </div>
        </CardDeck>
      </div>
    </Container>
    <Container
      className="page-container"
      fluid={true}
      tag="div"
    >
      <div
        className="page-container container-fluid"
      >
        <div
          style={
            Object {
              "maxWidth": 900,
            }
          }
        >
          <h3
            className="mb-4"
          >
            Frequently asked questions
          </h3>
          <Row
            className="faq"
            tag="div"
          >
            <div
              className="faq row"
            >
              <Col
                sm={6}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col-sm-6"
                >
                  <dl>
                    <dt>
                      What's a ticket?
                    </dt>
                    <dd>
                      A ticket is a conversation with a customer, on any channel. It can be by email, phone, chat, etc.
                      <br />
                      Usage only includes tickets that contain a response sent from Gorgias.
                    </dd>
                    <dt>
                      Do I need to pay for all tickets received?
                    </dt>
                    <dd>
                      No! You only pay for tickets that contain a response sent from Gorgias.
                    </dd>
                    <dt>
                      Do I need to pay extra for chat?
                    </dt>
                    <dd>
                      No, all channels are included. You can connect as many chat widgets, facebook pages, and email addresses as you want.
                    </dd>
                    <dt>
                      What level of support is included in my plan?
                    </dt>
                    <dd>
                      We provide all our customers with the same level of support. We're available 9am-7pm PST, over live chat & email.
                    </dd>
                  </dl>
                </div>
              </Col>
              <Col
                sm={6}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col-sm-6"
                >
                  <dl>
                    <dt>
                      I don’t know how many tickets I get per month. Can you help?
                    </dt>
                    <dd>
                      Sure. You probably receive about 1,000 tickets for each user in your team. So if you’re paying for 5 seats with your current helpdesk, you’d pay for 5,000 tickets with Gorgias.
                    </dd>
                    <dt>
                      Can I switch between plans?
                    </dt>
                    <dd>
                      Yes you can. Switching between monthly/yearly plans will 
                      <a
                        href="https://stripe.com/docs/subscriptions/upgrading-downgrading#understanding-proration"
                        rel="noreferrer noopener"
                        target="_blank"
                      >
                        prorate
                      </a>
                       your subscription. See the question below for switching from yearly to monthly plans.
                    </dd>
                    <dt>
                      Can I switch from an yearly plan to a monthly plan?
                    </dt>
                    <dd>
                      Once you start using our annual plan, you will get a %17 discount (2 months for free). Given this discount, we don't allow switching to monthly plans until the next billing cycle begins. In practice, it means that if you subscribe to a yearly plan on 15 May, you will be able to switch to a monthly plan next year on 15 May. Make sure you send us a message before so we can make the switch for you.
                    </dd>
                  </dl>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </div>
    </Container>
  </div>
</BillingPlans>
`;
